syntax = "proto3"; 

package Purchase; 

service PurchaseOrderService {
  rpc getOrders (GetPurchaseOrdersRequest) returns (GetPurchaseOrdersResponse);
}

message PurchaseOrder {
}

message GetPurchaseOrdersRequest {

}

message GetPurchaseOrdersResponse  {
  repeated PurchaseOrder orders = 1;
  int64 res_at = 2;
}